// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeEditor component should render correctly 1`] = `
<div>
  <fieldset
    class="cds--fieldset"
  >
    <legend
      class="cds--label"
    >
      foo
    </legend>
    <div
      class="react-codemirror2 miq-codemirror "
    >
      <div
        class="CodeMirror cm-s-eclipse CodeMirror-wrap"
        translate="no"
      >
        <div
          style="overflow: hidden; position: relative; width: 3px; height: 0px;"
        >
          <textarea
            autocapitalize="off"
            autocorrect="off"
            spellcheck="false"
            style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; min-height: 1em; outline: none;"
            tabindex="0"
          />
        </div>
        <div
          class="CodeMirror-vscrollbar"
          cm-not-content="true"
          tabindex="-1"
        >
          <div
            style="min-width: 1px;"
          />
        </div>
        <div
          class="CodeMirror-hscrollbar"
          cm-not-content="true"
          tabindex="-1"
        >
          <div
            style="height: 100%; min-height: 1px;"
          />
        </div>
        <div
          class="CodeMirror-scrollbar-filler"
          cm-not-content="true"
        />
        <div
          class="CodeMirror-gutter-filler"
          cm-not-content="true"
        />
        <div
          class="CodeMirror-scroll"
          tabindex="-1"
        >
          <div
            class="CodeMirror-sizer"
            style="margin-left: 0px;"
          >
            <div
              style="position: relative;"
            >
              <div
                class="CodeMirror-lines"
                role="presentation"
              >
                <div
                  role="presentation"
                  style="position: relative; outline: none;"
                >
                  <div
                    class="CodeMirror-measure"
                  >
                    <pre
                      class="CodeMirror-line-like"
                    >
                      <span>
                        xxxxxxxxxx
                      </span>
                    </pre>
                  </div>
                  <div
                    class="CodeMirror-measure"
                  />
                  <div
                    style="position: relative; z-index: 1;"
                  />
                  <div
                    class="CodeMirror-cursors"
                  />
                  <div
                    class="CodeMirror-code"
                    role="presentation"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            style="position: absolute; height: 50px; width: 1px;"
          />
          <div
            class="CodeMirror-gutters"
            style="left: 0px;"
          >
            <div
              class="CodeMirror-gutter CodeMirror-lint-markers"
            />
            <div
              class="CodeMirror-gutter CodeMirror-linenumbers"
              style="width: 1px;"
            />
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`CodeEditor component should render mode switches 1`] = `
<div>
  <fieldset
    class="cds--fieldset"
  >
    <legend
      class="cds--label"
    >
      foo
    </legend>
    <div
      class="cds--form-item"
    >
      <fieldset
        class="cds--radio-button-group cds--radio-button-group--label-right"
      >
        <div
          class="cds--radio-button-wrapper"
        >
          <input
            checked=""
            class="cds--radio-button"
            id="radio-button-1"
            name="--code-editor--mode"
            type="radio"
            value="yaml"
          />
          <label
            class="cds--radio-button__label"
            for="radio-button-1"
          >
            <span
              class="cds--radio-button__appearance"
            />
            <span
              class="cds--radio-button__label-text"
              dir="auto"
            >
              yaml
              
            </span>
          </label>
        </div>
        <div
          class="cds--radio-button-wrapper"
        >
          <input
            class="cds--radio-button"
            id="radio-button-2"
            name="--code-editor--mode"
            type="radio"
            value="json"
          />
          <label
            class="cds--radio-button__label"
            for="radio-button-2"
          >
            <span
              class="cds--radio-button__appearance"
            />
            <span
              class="cds--radio-button__label-text"
              dir="auto"
            >
              json
              
            </span>
          </label>
        </div>
      </fieldset>
      <div
        class="cds--radio-button__validation-msg"
      />
    </div>
    <div
      class="react-codemirror2 miq-codemirror "
    >
      <div
        class="CodeMirror cm-s-eclipse CodeMirror-wrap"
        translate="no"
      >
        <div
          style="overflow: hidden; position: relative; width: 3px; height: 0px;"
        >
          <textarea
            autocapitalize="off"
            autocorrect="off"
            spellcheck="false"
            style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; min-height: 1em; outline: none;"
            tabindex="0"
          />
        </div>
        <div
          class="CodeMirror-vscrollbar"
          cm-not-content="true"
          tabindex="-1"
        >
          <div
            style="min-width: 1px;"
          />
        </div>
        <div
          class="CodeMirror-hscrollbar"
          cm-not-content="true"
          tabindex="-1"
        >
          <div
            style="height: 100%; min-height: 1px;"
          />
        </div>
        <div
          class="CodeMirror-scrollbar-filler"
          cm-not-content="true"
        />
        <div
          class="CodeMirror-gutter-filler"
          cm-not-content="true"
        />
        <div
          class="CodeMirror-scroll"
          tabindex="-1"
        >
          <div
            class="CodeMirror-sizer"
            style="margin-left: 0px;"
          >
            <div
              style="position: relative;"
            >
              <div
                class="CodeMirror-lines"
                role="presentation"
              >
                <div
                  role="presentation"
                  style="position: relative; outline: none;"
                >
                  <div
                    class="CodeMirror-measure"
                  >
                    <pre
                      class="CodeMirror-line-like"
                    >
                      <span>
                        xxxxxxxxxx
                      </span>
                    </pre>
                  </div>
                  <div
                    class="CodeMirror-measure"
                  />
                  <div
                    style="position: relative; z-index: 1;"
                  />
                  <div
                    class="CodeMirror-cursors"
                  />
                  <div
                    class="CodeMirror-code"
                    role="presentation"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            style="position: absolute; height: 50px; width: 1px;"
          />
          <div
            class="CodeMirror-gutters"
            style="left: 0px;"
          >
            <div
              class="CodeMirror-gutter CodeMirror-lint-markers"
            />
            <div
              class="CodeMirror-gutter CodeMirror-linenumbers"
              style="width: 1px;"
            />
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;
